cluster/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.1.2-alpine
          ports:
            - name: mqtt
              containerPort: 1883
            - name: mqtt-ws
              containerPort: 9001
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
              readOnly: true
            - name: secrets
              mountPath: /mosquitto/config/passwords.conf
              subPath: passwords.conf
              readOnly: true
            - name: config
              mountPath: /mosquitto/config/acl.conf
              subPath: acl.conf
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 1883
          readinessProbe:
            tcpSocket:
              port: 1883
      volumes:
        - name: config
          configMap:
            name: mosquitto
        - name: secrets
          secret:
            secretName: mosquitto
