cluster/mosquitto/service-nodeport.yaml
# This provides local-network access to the MQTT broker by binding it directly
# to the port (since HTTP ingress won't work)
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-nodeport
  namespace: mosquitto
spec:
  type: NodePort
  ports:
    - port: 1883
      nodePort: 31883
  selector:
    app: mosquitto
