cluster/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    external-dns.alpha.kubernetes.io/target: "97.117.4.142"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/response-set-header: |
      Alt-Svc "h3=\":443\"; ma=86400"
      Cross-Origin-Resource-Policy "same-origin"
      Content-Security-Policy "frame-ancestors 'none'; upgrade-insecure-requests; report-to cf-nel"
      Referrer-Policy "same-origin"
      Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options "nosniff"
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  ingressClassName: haproxy
  rules:
    - host: mosquitto.herron.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 9001
  tls:
    - hosts:
        - mosquitto.herron.dev
      secretName: mosquitto-tls
